Bug 426246 - onion skin visible when playing the animation
Summary: onion skin visible when playing the animation
Status: RESOLVED FIXED
Alias: None
Product: krita
Classification: Applications
Component: Animation (other bugs)
Version First Reported In: unspecified
Platform: Microsoft Windows Microsoft Windows
: NOR normal
Target Milestone: ---
Assignee: Dmitry Kazakov
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2020-09-06 14:35 UTC by Emily
Modified: 2020-09-28 11:36 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
attachment-31873-0.html (1.64 KB, text/html)
2020-09-24 20:55 UTC, Emily
Details
attachment-14306-0.html (1007 bytes, text/html)
2020-09-28 07:04 UTC, Emily
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Emily 2020-09-06 14:35:02 UTC
SUMMARY
i'll add an attachment because idk how else to describe it :V

STEPS TO REPRODUCE
1. make a simple looping animation once
2. copy-paste it in a few times so it'll play longer
3. play the animation

OBSERVED RESULT
the onion skin stayed visible throughout playing the animation

EXPECTED RESULT
the onion skin shouldn't be visible while playing the animation

SOFTWARE/OS VERSIONS
Windows:
macOS: 
Linux/KDE Plasma: 
(available in About System)
KDE Plasma Version: 
KDE Frameworks Version: 
Qt Version: 

ADDITIONAL INFORMATION
Comment 1 Ahab Greybeard 2020-09-09 20:44:10 UTC
I can reproduce this with the Linux appimages from 4.2.0 onwards to the latest Sep09 5.0.0 prealpha (git da8cf68).

It happens if cga (canvas graphics acceleration) is disabled.
The onion skins are not visible on playback if the cga is enabled.

@Emily: Can you check if you have cga disabled and see if your further observations match mine?
If so, please set to Confirmed.
Comment 2 Bug Janitor Service 2020-09-24 04:33:10 UTC
Dear Bug Submitter,

This bug has been in NEEDSINFO status with no change for at least
15 days. Please provide the requested information as soon as
possible and set the bug status as REPORTED. Due to regular bug
tracker maintenance, if the bug is still in NEEDSINFO status with
no change in 30 days the bug will be closed as RESOLVED > WORKSFORME
due to lack of needed information.

For more information about our bug triaging procedures please read the
wiki located here:
https://community.kde.org/Guidelines_and_HOWTOs/Bug_triaging

If you have already provided the requested information, please
mark the bug as REPORTED so that the KDE team knows that the bug is
ready to be confirmed.

Thank you for helping us make KDE software even better for everyone!
Comment 3 Tiar 2020-09-24 11:44:52 UTC
Confirming.
Comment 4 Emily 2020-09-24 20:55:42 UTC
Created attachment 131918 [details]
attachment-31873-0.html

Sorry for the late reply. I realized that while this was a bug, it didn't
affect the overall performance of Krita, and the onion skin didn't stay in
the final animation when I exported it. Sorry for wasting your time! Is
there any way for me to revoke my bug report?

On Thu, Sep 24, 2020 at 4:44 AM Tymond <bugzilla_noreply@kde.org> wrote:

> https://bugs.kde.org/show_bug.cgi?id=426246
>
> Tymond <tamtamy.tymona@gmail.com> changed:
>
>            What    |Removed                     |Added
>
> ----------------------------------------------------------------------------
>      Ever confirmed|0                           |1
>          Resolution|WAITINGFORINFO              |---
>                  CC|                            |tamtamy.tymona@gmail.com
>              Status|NEEDSINFO                   |CONFIRMED
>
> --- Comment #3 from Tymond <tamtamy.tymona@gmail.com> ---
> Confirming.
>
> --
> You are receiving this mail because:
> You reported the bug.
Comment 5 Ahab Greybeard 2020-09-24 21:14:09 UTC
It's been accepted as a bona fide bug report and been Confirmed by the Chief Bug Wrangler (Tymond).
It's now up to the developers to decide if cga being enabled/disabled should have an effect on the onion skins :)
Comment 6 Emily 2020-09-28 07:04:39 UTC
Created attachment 131978 [details]
attachment-14306-0.html

Got it, thanks! :D

On Thu, Sep 24, 2020, 5:14 PM Ahab Greybeard <bugzilla_noreply@kde.org>
wrote:

> https://bugs.kde.org/show_bug.cgi?id=426246
>
> --- Comment #5 from Ahab Greybeard <ahab.greybeard@hotmail.co.uk> ---
> It's been accepted as a bona fide bug report and been Confirmed by the
> Chief
> Bug Wrangler (Tymond).
> It's now up to the developers to decide if cga being enabled/disabled
> should
> have an effect on the onion skins :)
>
> --
> You are receiving this mail because:
> You reported the bug.
Comment 7 Dmitry Kazakov 2020-09-28 11:21:12 UTC
Git commit d5df33830cb48c70b569d3de4bd7700a9e70986d by Dmitry Kazakov.
Committed on 28/09/2020 at 11:20.
Pushed by dkazakov into branch 'krita/4.3'.

Fix hiding onion skins when playing animation

We can reuse KisDecoratedNodeInterface for that. This interface
is normally used by Transform Tool.

M  +28   -0    libs/ui/canvas/kis_animation_player.cpp

https://invent.kde.org/graphics/krita/commit/d5df33830cb48c70b569d3de4bd7700a9e70986d
Comment 8 Dmitry Kazakov 2020-09-28 11:36:55 UTC
Git commit fe7f1ee2b4f11a8b311bf99178bae7592986e7e5 by Dmitry Kazakov.
Committed on 28/09/2020 at 11:29.
Pushed by dkazakov into branch 'master'.

Fix hiding onion skins when playing animation

We can reuse KisDecoratedNodeInterface for that. This interface
is normally used by Transform Tool.

# Conflicts:
#	libs/ui/canvas/kis_animation_player.cpp

M  +28   -0    libs/ui/canvas/kis_animation_player.cpp

https://invent.kde.org/graphics/krita/commit/fe7f1ee2b4f11a8b311bf99178bae7592986e7e5