Fix hiding onion skins when playing animation

We can reuse KisDecoratedNodeInterface for that. This interface
is normally used by Transform Tool.

BUG:426246